--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,10 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:name=".Controller.UserActivity"
+            android:name=".controller.UserActivity"
             android:screenOrientation="portrait" />
 
-        <activity android:name=".Controller.MainActivity" android:screenOrientation="portrait">
+        <activity android:name=".controller.MainActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
